# eli

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  TODOS.md  demo.tape  docker-compose.yml  entrypoint.sh  env.example  justfile
.agents/: SOUL.md  SYSTEM.md
.aiden/: settings.json
.claude/: settings.json
.context/: codex-session-id
.github/workflows/: main.yml  on-release-main.yml  pages.yml
.openmax/reports/: report-challenge-review.md  report-challenge-rewrite.md  report-challenge.md  report-final-review.md  report-final-reviewer.md  report-final-rewrite.md  report-review-review.md  report-review-reviewer.md  report-review-rewrite.md  report-review.md  review-conduit-core.md  review-eli-framework.md  structure-analysis-rewrite.md  structure-analysis.md  structure-review-challenges.md  structure-review-critique.md  structure-review.md
crates/conduit/: Cargo.toml
crates/conduit/src/: adapter.rs  lib.rs  llm.rs  llm_tests.rs
crates/conduit/src/auth/: github_copilot.rs  openai_codex.rs
crates/conduit/src/clients/: chat.rs  embedding.rs  internal.rs  mod.rs
crates/conduit/src/clients/parsing/: completion.rs  messages.rs
crates/conduit/src/core/: anthropic_messages.rs  api_format.rs  client_registry.rs  error_classify.rs  execution.rs  message_norm.rs  mod.rs  provider_policies.rs  provider_runtime.rs  request_adapters.rs  request_builder.rs  response_parser.rs  results.rs  tool_calls.rs
crates/conduit/src/llm/: embedding.rs  mod.rs  tests.rs
crates/conduit/src/providers/: anthropic.rs  openai.rs
crates/conduit/src/tape/: context.rs  entries.rs  manager.rs  mod.rs  session.rs  store.rs
crates/conduit/src/tools/: context.rs  executor.rs  mod.rs  schema.rs
crates/conduit/tests/e2e/: mod.rs  vision.rs
crates/eli/: Cargo.toml
crates/eli/examples/: custom_tool.rs  hook_plugin.rs
crates/eli/src/: control_plane.rs  envelope.rs  evolution.rs  framework.rs  hooks.rs  lib.rs  main.rs  prompt_builder.rs  sidecar_contract.rs  skill_matcher.rs  skills.rs  smart_router.rs  tool_middleware.rs  tools.rs  types.rs  utils.rs
crates/eli/src/builtin/: agent.rs  cli.rs  coding_plan.rs  command_semantics.rs  config.rs  context.rs  mod.rs  model_specs.rs  settings.rs  shell_manager.rs  store.rs  tape.rs  tape_viewer.html  tape_viewer.rs  tools.rs
crates/eli/src/builtin/agent/: agent_command.rs  agent_request.rs  agent_run.rs  mod.rs
crates/eli/src/builtin/cli/: channel.rs  chat.rs  decisions.rs  detect.rs  evolution.rs  gateway.rs  login.rs  mod.rs  model.rs  profile.rs  run.rs  sidecar_support.rs  tape.rs  task.rs
crates/eli/src/builtin/subagent/: fallback.rs  mod.rs  tests.rs  tracker.rs  worktree.rs
crates/eli/src/channels/: base.rs  cli.rs  handler.rs  manager.rs  message.rs  mod.rs  telegram.rs  webhook.rs
crates/eli/src/evolution/: auto.rs  distill.rs  eval.rs
crates/eli/src/taskboard/: mod.rs  store.rs  worker.rs
crates/eli/tests/: pipeline_integration.rs  skills_hygiene.rs  taskboard_integration.rs
crates/nexil/: Cargo.toml
crates/nexil/examples/: basic_chat.rs  streaming.rs
crates/nexil/src/: lib.rs
crates/nexil/src/auth/: github_copilot.rs  mod.rs  openai_codex.rs
crates/nexil/src/clients/: chat.rs  embedding.rs  internal.rs  text.rs
crates/nexil/src/clients/parsing/: common.rs  completion.rs  messages.rs  mod.rs  responses.rs  sse.rs  types.rs
crates/nexil/src/core/: anthropic_messages.rs  client_registry.rs  error_classify.rs  errors.rs  execution.rs  message_norm.rs  mod.rs  provider_policies.rs  provider_registry.rs  provider_runtime.rs  request_builder.rs  response_parser.rs  results.rs
crates/nexil/src/llm/: builder.rs  decisions.rs  helpers.rs  mod.rs  stream.rs  tests.rs  tool_loop.rs
crates/nexil/src/providers/: anthropic.rs  mod.rs  openai.rs
crates/nexil/src/tape/: context.rs  entries.rs  manager.rs  mod.rs  query.rs  session.rs  spill.rs  store.rs
crates/nexil/src/tools/: executor.rs  schema.rs
docs/: ARCHITECTURE_LANDSCAPE.md  ARCHITECTURE_REVIEW_2026-04-06.md  DX_IMPROVEMENT_PLAN_2026-04-10.md  REVIEW_2026-04-10.md  STRUCTURE_REVIEW.md  architecture.md  conduit-provider-adapter-refactor.md  deployment.md  extension-guide.md  features.md  index.md  nexil-provider-adapter-refactor.md  rust-conventions.md  skills.md
docs/channels/: cli.md  index.md  telegram.md
docs/launch/: awesome-rust-pr.md  chinese-v2ex-juejin.md  hackernews.md  reddit-rust.md
docs/plans/: 2026-04-14-auto-evolution-loop.md  agent-infer-backend.md  agent-stability-recovery-parallel.md  architecture-future-roadmap.md  autoresearch-skill.md  builtin-tools-perf-context.md  elegant-rust-pass.md  file-tools-polish.md  in-process-subagent.md  logging-signal-path.md  multi-agent-taskboard.md  openclaw-compatibility.md  prompt-polish.md  rust-anti-patterns-reference.md  sidecar-agent-integration.md  sidecar-contract-v1.md  skill-polish.md  system-prompt-hot-path.md  telegram-sidecar-migration.md  tool-descriptions-polish.md
docs/posts/: 2025-07-16-baby-eli-bootstrap-milestone.md  2026-03-01-eli-socialized-evaluation-and-agent-partnership.md  index.md
docs/research/: 2026-03-26-system-prompt-state-of-the-art.md
scripts/: check.sh  doctor.sh  release_check.sh  test_python.sh  test_sidecar.sh
sidecar/: .gitignore  AGENTS.md  CHANGELOG.md  README.md  package-lock.json  package.json  sidecar.example.json  start.cjs  tsconfig.build.json  tsconfig.json
sidecar/plugins/: telegram.ts
sidecar/scripts/: patch-openclaw-exports.cjs
sidecar/src/: api.ts  bridge.ts  config.ts  contract.ts  envelope.ts  index.ts  log.ts  mcp.ts  registry.ts  runtime.ts  types.ts
sidecar/test/: bridge.test.ts  config.test.ts  contract.test.ts  envelope.test.ts  lark-plugin.test.ts  mock-channel-plugin.ts  start-test.ts  telegram-plugin.test.ts  test-endpoints.ts
site/: CNAME  index.html  palu-low-rank-projection.html
tests/: conftest.py  test_basic.py  test_feedback_signals.py  test_gateway.py  test_hooks.py  test_spill.py  test_subagent.py  test_subagent_gateway.py  test_vision.py
(+120 files in other folders)
