[package]
name = "eli"
version = "0.3.4"
edition = "2024"
description = "Ease Lives Instantly — hook-first AI agent framework with multi-channel support"
license = "Apache-2.0"
repository = "https://github.com/cklxx/eli"
homepage = "https://eliagent.github.io"
keywords = ["ai", "agent", "llm", "rust", "framework"]
categories = ["command-line-utilities"]

[[bin]]
name = "eli"
path = "src/main.rs"

[dependencies]
nexil = { version = "0.6.2", path = "../nexil" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
futures = "0.3"
tokio-util = { version = "0.7", features = ["rt"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
teloxide = { version = "0.13", features = ["macros"], optional = true }
md5 = "0.7"
dirs = "6"
dotenvy = "0.15"
serde_yaml = "0.9"
toml = "0.8"
regex = "1"
shell-words = "1"
shellexpand = "3"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
open = "5"
axum = { version = "0.8", optional = true }

[features]
default = ["telegram", "gateway", "tape-viewer"]
telegram = ["dep:teloxide"]
gateway = ["dep:axum"]
tape-viewer = ["dep:axum"]

[[example]]
name = "custom_tool"

[[example]]
name = "hook_plugin"

[dev-dependencies]
tempfile = "3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
