[package]
name = "eli"
version = "0.5.1"
edition = "2024"
description = "Ease Lives Instantly — hook-first AI agent framework with multi-channel support"
license = "Apache-2.0"
repository = "https://github.com/cklxx/eli"
homepage = "https://eliagent.github.io"
keywords = ["ai", "agent", "llm", "rust", "framework"]
categories = ["command-line-utilities"]

[[bin]]
name = "eli"
path = "src/main.rs"

[dependencies]
nexil = { version = "0.8.0", path = "../nexil" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
arc-swap = { workspace = true }
futures = "0.3"
tokio-util = { version = "0.7", features = ["rt"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
md5 = "0.7"
dirs = "6"
dotenvy = "0.15"
serde_yaml = "0.9"
toml = "0.8"
regex = "1"
shell-words = "1"
shellexpand = "3"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
open = "5"
parking_lot = "0.12"
axum = { version = "0.8", optional = true }
tempfile = "3"
schemars = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }

[features]
default = ["gateway", "tape-viewer"]
gateway = ["dep:axum"]
tape-viewer = ["dep:axum"]

[[example]]
name = "custom_tool"

[[example]]
name = "hook_plugin"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
