[package]
name = "nexil"
version = "0.6.3"
edition = "2024"
description = "Provider-agnostic LLM toolkit — streaming, tool calls, tape storage, OAuth"
license = "Apache-2.0"
repository = "https://github.com/cklxx/eli"
homepage = "https://eliagent.github.io"
keywords = ["ai", "llm", "streaming", "openai", "anthropic"]
categories = ["api-bindings"]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
base64 = "0.22"
futures = "0.3"
tokio-stream = "0.1"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
url = "2"
dirs = "6"
tokio-util = { version = "0.7", features = ["rt"] }
open = "5"

[[example]]
name = "basic_chat"

[[example]]
name = "streaming"

[dev-dependencies]
tempfile = "3"
dotenvy = "0.15"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
